samples/_failures_safe/1761300623_661e56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29ac8370.c: In function ‘main’:
./samples/SAFE/__tmp_29ac8370.c:164:5: error: expected ‘{’ at end of input
  164 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_29ac8370.c:164:5: error: expected declaration or statement at end of input
